--- a/app/src/main/res/layout/activity_edit_link.xml
+++ b/app/src/main/res/layout/activity_edit_link.xml
@@ -77,9 +77,9 @@
         android:layout_marginBottom="12dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_link_24" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_link" />
 
         <EditText
             android:id="@+id/linkTextView"
@@ -107,9 +107,9 @@
         android:layout_marginBottom="12dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_insert_comment_24" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_memo" />
 
         <EditText
             android:id="@+id/descriptionEditText"
@@ -140,9 +140,9 @@
         android:paddingHorizontal="24dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_star_border_24" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_bookmark" />
 
         <TextView
             android:layout_width="0dp"
@@ -157,6 +157,7 @@
             android:id="@+id/starSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:track="@drawable/switch_track_selector"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
 
@@ -178,9 +179,9 @@
         android:paddingHorizontal="24dp">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_notifications_none_24" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_bell" />
 
         <TextView
             android:layout_width="0dp"
@@ -195,6 +196,7 @@
             android:id="@+id/reminderSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:track="@drawable/switch_track_selector"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
 
