--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -3,12 +3,12 @@
     android:shape="rectangle" >
 
     <corners
-        android:radius="15dp" />
+        android:radius="16dp" />
 
     <size
-        android:width="24dp"
-        android:height="16dp" />
+        android:width="41dp"
+        android:height="21dp" />
     <solid
-        android:color="@color/black" />
+        android:color="#123466" />
 
 </shape>
