--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -1,230 +1,258 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomSheetDashBoardLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
     android:orientation="vertical">
+
 
     <View
         android:id="@+id/transparentView"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
-        app:layout_constraintBottom_toTopOf="@id/lineView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/parentView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/bottom_popup_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/transparentView" />
-
-    <View
-        android:id="@+id/lineView"
-        android:layout_width="150dp"
-        android:layout_height="5dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/gray_cc"
-        app:layout_constraintBottom_toTopOf="@id/spinner"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintTop_toTopOf="@id/parentView" />
-
-    <androidx.appcompat.widget.AppCompatSpinner
-        android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_height="32dp"
-        android:layout_marginHorizontal="64dp"
-        android:background="@drawable/spinner_selector"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toTopOf="@id/linkNameLayout"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintTop_toBottomOf="@id/lineView" />
-
-    <LinearLayout
-        android:id="@+id/linkNameLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"
-        app:layout_constraintBottom_toTopOf="@id/linkLayout"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintTop_toBottomOf="@id/spinner">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_bookmark_border_24" />
-
-        <EditText
-            android:id="@+id/linkNameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:hint="@string/titleText"
-            android:imeOptions="actionNext"
-            android:inputType="textPersonName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linkLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"
-        app:layout_constraintBottom_toTopOf="@id/descriptionLayout"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintTop_toBottomOf="@id/linkNameLayout">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_link_24" />
-
-        <EditText
-            android:id="@+id/linkEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:hint="@string/linkText"
-            android:imeOptions="actionNext"
-            android:inputType="textPersonName" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/descriptionLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"
-        app:layout_constraintBottom_toTopOf="@id/starLayout"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintTop_toBottomOf="@id/linkLayout">
-
-        <ImageView
-            android:id="@+id/descriptionImageView"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_insert_comment_24" />
-
-        <EditText
-            android:id="@+id/descriptionEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:hint="@string/memo"
-            android:imeOptions="actionDone"
-            android:inputType="textPersonName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/starLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"
-        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
-        app:layout_constraintStart_toStartOf="@id/parentView"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintBottom_toTopOf="@id/reminderLayout">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_star_border_24" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="14dp"
-            android:layout_weight="1"
-            android:hint="@string/settingBookMark"
-            android:textSize="18sp" />
-
-        <Switch
-            android:id="@+id/starSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:track="@drawable/switch_track_selector"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/reminderLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="12dp"
-        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
-        app:layout_constraintEnd_toEndOf="@id/parentView"
-        app:layout_constraintStart_toStartOf="@id/parentView">
-
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_notifications_none_24" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="14dp"
-            android:layout_weight="1"
-            android:hint="@string/settingReminder"
-            android:textSize="18sp" />
-
-        <Switch
-            android:id="@+id/reminderSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:track="@drawable/switch_track_selector"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal"
-        android:padding="24dp"
-        app:layout_constraintBottom_toBottomOf="@id/parentView"
-        app:layout_constraintEnd_toEndOf="@id/parentView">
+        android:layout_height="200dp" />
 
-        <android.widget.Button
-            android:id="@+id/cancelButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:background="@drawable/button_add_cancel" />
+    <LinearLayout
+        android:id="@+id/parentView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/bottom_popup_shape"
+        android:gravity="top"
+        android:orientation="vertical">
 
-        <android.widget.Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
+        <View
+            android:id="@+id/lineView"
+            android:layout_width="70dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="22dp"
+            android:background="@color/gray_cc"/>
+
+        <LinearLayout
+            android:id="@+id/linkNameLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_save"
-            android:textColor="@color/white" />
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="30dp">
+
+            <EditText
+                android:id="@+id/linkNameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:background="#00FFFFFF"
+                android:hint="제목"
+                android:imeOptions="actionDone"
+                android:inputType="textPersonName" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/lineView3"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/gray_cc" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="5dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_folder" />
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/spinner_selector" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/lineView4"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/gray_cc" />
+
+        <LinearLayout
+            android:id="@+id/linkLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="5dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_add_link_link" />
+
+            <EditText
+                android:id="@+id/linkEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:background="@null"
+                android:hint="@string/linkText"
+                android:imeOptions="actionDone"
+                android:inputType="textPersonName" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/lineView5"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/gray_cc" />
+
+        <LinearLayout
+            android:id="@+id/descriptionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="5dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_memo" />
+
+            <EditText
+                android:id="@+id/descriptionEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:background="@null"
+                android:hint="@string/memo"
+                android:imeOptions="actionDone"
+                android:inputType="textPersonName" />
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/lineView6"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/gray_cc" />
+
+        <LinearLayout
+            android:id="@+id/starLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="5dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_add_link_bookmark" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:text="즐겨찾기 설정"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/starSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumbTint="#FFFFFF"
+                android:track="@drawable/switch_track_selector"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/lineView7"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
+            android:background="@color/gray_cc" />
+
+        <LinearLayout
+            android:id="@+id/reminderLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="30dp">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ic_add_link_bell" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:text="@string/settingReminder"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+
+            <Switch
+                android:id="@+id/reminderSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:thumbTint="#FFFFFF"
+                android:track="@drawable/switch_track_selector"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/buttonLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <android.widget.Button
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:background="@drawable/button_cancel" />
+
+            <android.widget.Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_save"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
