--- a/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -13,8 +13,10 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         app:itemTextColor="@color/black"
-        android:background="?android:attr/windowBackground"
-        app:itemIconTint="@drawable/menu_color"
+        android:background="@drawable/navigation_bar"
+        android:paddingTop="10dp"
+        app:elevation="10dp"
+        app:itemIconTint="@drawable/navigation_button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
