--- a/app/src/main/res/layout/activity_edit_link.xml
+++ b/app/src/main/res/layout/activity_edit_link.xml
@@ -28,7 +28,7 @@
             android:gravity="center"
             android:text="@string/editText"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="invisible"
             tools:visibility="visible" />
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:backgroundTint="#00000000"
-            android:src="@drawable/ic_baseline_more_vert_24" />
+            android:src="@drawable/ic_menubar_button" />
 
     </LinearLayout>
 
@@ -73,13 +73,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp">
+        android:layout_marginVertical="15dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_link" />
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_folder" />
+
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/spinner_selector" />
+
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="24dp"
+        android:background="@color/gray_cc" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="15dp">
+
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_add_link_link" />
 
         <EditText
             android:id="@+id/linkTextView"
@@ -88,6 +116,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="12dp"
             android:background="@android:color/transparent"
+            android:textColor="#2464C7"
             android:inputType="textUri"
             tools:text="naver.com" />
 
@@ -103,12 +132,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp">
+        android:layout_marginVertical="15dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:src="@drawable/ic_memo" />
 
         <EditText
@@ -133,30 +161,30 @@
         android:id="@+id/starLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginVertical="15dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="24dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_bookmark" />
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_add_link_bookmark" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
             android:layout_weight="1"
-            android:hint="@string/settingBookMark"
-            android:textColor="@color/black"
+            android:text="즐겨찾기 설정"
+            android:textColor="#242424"
             android:textSize="18sp" />
 
         <Switch
             android:id="@+id/starSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:thumbTint="#FFFFFF"
             android:track="@drawable/switch_track_selector"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
@@ -172,30 +200,30 @@
         android:id="@+id/reminderLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginVertical="15dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="24dp">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_bell" />
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_add_link_bell" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
             android:layout_weight="1"
-            android:hint="@string/settingReminder"
-            android:textColor="@color/black"
+            android:text="@string/settingReminder"
+            android:textColor="#242424"
             android:textSize="18sp" />
 
         <Switch
             android:id="@+id/reminderSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:thumbTint="#FFFFFF"
             android:track="@drawable/switch_track_selector"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
@@ -218,7 +246,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:background="@drawable/button_cancel"
-            android:text="@string/cancelString"
             android:textColor="@color/black"
             android:visibility="invisible"
             tools:visibility="visible" />
@@ -227,9 +254,7 @@
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_ok_selector"
-            android:text="@string/saveString"
-            android:textColor="@color/white"
+            android:background="@drawable/button_save"
             android:visibility="invisible"
             tools:visibility="visible" />
     </LinearLayout>
