--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -26,9 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/notificationString"
-            android:textColor="@color/black"
-            android:textSize="24sp"
+            android:text="리마인더"
+            android:textColor="#242424"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageButton
@@ -44,7 +44,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/gray_cc" />
+        android:background="#E5E5E5" />
 
     <LinearLayout
         android:id="@+id/reminderLayout"
@@ -60,15 +60,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/settingReminder"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:text = "리마인더 설정"
+            android:textColor="#505050"
+            android:textSize="17sp"
             android:textStyle="bold" />
 
         <Switch
             android:id="@+id/reminderSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:thumbTint="#FFFFFF"
             android:track="@drawable/switch_track_selector"
             tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
     </LinearLayout>
@@ -95,12 +96,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginVertical="12dp"
-                android:gravity="center">
+                android:gravity="center|top">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_baseline_notifications_none_24" />
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:layout_marginVertical="8dp"
+                    android:src="@drawable/ic_add_link_bell" />
 
                 <LinearLayout
                     android:id="@+id/notificationSettingLayout"
@@ -115,25 +117,28 @@
                         android:layout_marginVertical="4dp"
                         android:padding="8dp"
                         android:text="알림 주기"
-                        android:textColor="@color/black" />
+                        android:textSize="16sp"
+                        android:textColor="#505050" />
 
                     <TextView
                         android:id="@+id/countTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="4dp"
+                        android:textColor="#505050"
                         android:padding="6dp"
-                        android:textSize="18sp"
-                        tools:text="4주 2번 1회" />
+                        android:textSize="16sp"
+                        tools:text="4주     2번     1회" />
 
                     <TextView
                         android:id="@+id/timeTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="4dp"
+                        android:textColor="#505050"
                         android:padding="6dp"
-                        android:textSize="18sp"
-                        tools:text="오전 12시 00분" />
+                        android:textSize="16sp"
+                        tools:text="오전    12시    00분" />
 
                 </LinearLayout>
 
@@ -167,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:text="주"
-                    android:textColor="@color/black"
+                    android:textColor="#505050"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -182,7 +187,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:text="번"
-                    android:textColor="@color/black"
+                    android:textColor="#505050"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -197,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:text="개"
-                    android:textColor="@color/black"
+                    android:textColor="#505050"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -246,8 +251,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
-                    android:text=" :"
-                    android:textColor="@color/black"
+                    android:text="  : "
+                    android:textColor="#505050"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -274,6 +279,36 @@
                 android:background="@color/gray_cc" />
 
             <LinearLayout
+                android:id="@+id/buttonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="gone"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <android.widget.Button
+                    android:id="@+id/cancelButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="10dp"
+                    android:clickable="false"
+                    android:background="@drawable/button_cancel" />
+
+                <android.widget.Button
+                    android:id="@+id/SaveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:clickable="false"
+                    android:background="@drawable/button_save" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/starLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -284,17 +319,17 @@
                 android:paddingHorizontal="24dp">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:src="@drawable/ic_baseline_folder_open_24" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/ic_folder" />
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="14dp"
                     android:layout_weight="1"
-                    android:hint="@string/remindFoldersStrung"
-                    android:textColor="@color/black"
+                    android:text="@string/remindFoldersStrung"
+                    android:textColor="#505050"
                     android:textSize="18sp" />
 
                 <Switch
@@ -311,9 +346,41 @@
                 android:id="@+id/remindFolderRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="24dp" />
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginVertical="14dp"/>
+
+            <LinearLayout
+                android:id="@+id/folderButtonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="right"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <android.widget.Button
+                    android:id="@+id/folderCancelButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/button_cancel"
+                    android:clickable="false" />
+
+                <android.widget.Button
+                    android:id="@+id/folderSaveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/button_save"
+                    android:clickable="false" />
+            </LinearLayout>
 
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
 </LinearLayout>
