--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,8 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#FFFFFF"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -18,24 +17,28 @@
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginEnd="6dp"
-            android:backgroundTint="#FFFFFF"
-            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
+            android:layout_margin="12dp"
+            android:backgroundTint="#00000000"
+            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="설정"
-            android:textColor="#000000"
-            android:textSize="18sp" />
+            android:textColor="#242424"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-        <Space
-            android:layout_width="50dp"
-            android:layout_height="wrap_content" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:clickable="false"
+            android:src="@drawable/ic_baseline_more_vert_24"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
@@ -53,7 +56,7 @@
                 android:id="@+id/emailButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:background="@drawable/button_setting_background"
                 android:stateListAnimator="@null"
                 android:text="         이메일 연동하기"
