--- a/app/src/main/res/layout/item_remind_folder.xml
+++ b/app/src/main/res/layout/item_remind_folder.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <CheckBox
         android:id="@+id/checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="34dp"
+        android:layout_height="wrap_content"
+        android:buttonTint="#133466" />
 
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_marginStart="12dp"
         android:layout_width="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="#505050"
         android:text="asd"
         android:layout_height="wrap_content"/>
 
