--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,18 +3,18 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_home"
+        android:title="" />
 
     <item
     android:id="@+id/navigation_notifications"
-    android:icon="@drawable/ic_notifications_black_24dp"
-    android:title="@string/title_notifications" />
+    android:icon="@drawable/ic_notifications"
+    android:title="" />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/title_settings" />
+        android:icon="@drawable/ic_settings"
+        android:title="" />
 
 
 </menu>
