EditText 인풋타입 변경

--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -109,7 +109,7 @@
                 android:background="@null"
                 android:hint="@string/linkText"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName" />
+                android:inputType="textUri" />
 
         </LinearLayout>
 
